<resources>
    <string name="app_name">BinChecker</string>
    <string name="bin_hint">Введите первые цифры номера карты (БИН/ИНН)</string>
    <string name="scheme">SCHEME / NETWORK</string>
    <string name="type">TYPE</string>
    <string name="brand">BRAND</string>
    <string name="prepaid">PREPAID</string>

    <string name="card_number">CARD NUMBER</string>
    <string name="card_number_length">LENGTH</string>
    <string name="card_number_luhn">LUHN</string>

    <string name="country">COUNTRY</string>

    <string name="bank">BANK</string>
    <string name="none">none</string>


    <string name="history">История запросов</string>
    <string name="id">ID</string>
</resources>