<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>
        <TableLayout
            android:layout_weight="0.25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank">
            </TextView>
        </TableLayout>
        <TableLayout
            android:layout_weight="0.25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/itemId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="none">
            </TextView>
            <TextView
                android:id="@+id/itemBank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none">
            </TextView>
        </TableLayout>
        <TableLayout
            android:layout_weight="0.25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SCHEME">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type">
            </TextView>
        </TableLayout>
        <TableLayout
            android:layout_weight="0.25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/itemScheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none">
            </TextView>
            <TextView
                android:id="@+id/itemType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none">
            </TextView>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>